fix: Overflow

--- a/src/sections/section1.css
+++ b/src/sections/section1.css
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     background-size:100% 20%;
     background-position: center bottom;
+    overflow: hidden;
 }
 
 .heading{
