--- a/src/sections/section3.css
+++ b/src/sections/section3.css
@@ -1,5 +1,6 @@
 .section3{   
     background-color: #081024;
+    overflow: hidden;
 }
 
 .head2{
