--- a/src/sections/section5.css
+++ b/src/sections/section5.css
@@ -6,6 +6,7 @@
     background-position: center top;
     overflow: hidden; 
     margin-top: -2%;
+    overflow: hidden;
 }
 
 .heads >h2{
